// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generator mutation 1`] = `
"mutation {
    createModel1(input: {setField1: {field1: \\"11\\"}}) {
        test
    }
}"
`;

exports[`Generator mutation 2`] = `"StopHi"`;

exports[`Generator query 1`] = `
"query {
    viewer {
        model1(first: 10, after: \\"15\\", before: \\"15\\", last: 10) {
            edges {
                node {
                    model2(where: {field1: [\\"test\\"], field3: [{field4: \\"testValueField4\\"}]}) {
                        field2
                        id
                    }
                    field1
                }
            }
        }
        id
    }
}"
`;

exports[`Generator query 2`] = `
Object {
  "id": "15",
  "items": Array [
    Object {
      "f": "field1Value",
      "x": "101",
      "y": "11",
    },
  ],
}
`;

exports[`Generator query with same arguments 1`] = `
"query {
    viewer {
        model1(first: 10) {
            edges {
                node {
                    field1
                }
            }
        }
        f1:model1(first: 20) {
            edges {
                node {
                    field1
                }
            }
        }
    }
}"
`;
